fixing alignment issues

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ nav img{
     transition: color 0.3s; /* Smooth transition effect for color change */
 }
 .nav-links ul li a:hover{
-    color: pink; /* Change text color to pink on hover */
+    color: #FF00B8; /* Change text color to pink on hover */
 }
 
 .text-box{
@@ -48,6 +48,7 @@ nav img{
     text-align: center;
 }
 .text-box h1{
-    font-size: 200 px;
+    text-align: center;
+    font-size: 192px;
 
 }
